<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id = "@+id/login_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/prowork_blue"
  >
  
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        android:layout_weight="1"
	        android:gravity="center"
	    >
		    <ImageView 
	        	android:id="@+id/logo"
				android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/app_name"
	            android:padding="10dp"
	            android:src="@drawable/logo"
			 />
	    </LinearLayout>
	    
	    
	    <ScrollView
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="1" 
	        >
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center|top"
	    >
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		    >
		    
			    <LinearLayout
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			    >
				    <EditText
				        android:id="@+id/email"
				        android:width="256dp"
				        android:layout_height="wrap_content"
				        android:layout_width="0dp"
				        android:layout_weight="1"
				        android:hint="@string/email"
				        android:imeOptions="actionDone"
						android:inputType="textEmailAddress"
						>
				        <requestFocus />
				    </EditText>
			    </LinearLayout>
				    
				    
			    <LinearLayout
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			    >
				    <EditText
				        android:id="@+id/password"
				        android:width="256dp"
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:imeOptions="actionDone"
				        android:layout_weight="1"
				        android:hint="@string/password"
				        android:inputType="textPassword" />
			    </LinearLayout>
			
			    <LinearLayout
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			    >
			        <Button
			            android:id="@+id/login_button"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:gravity="center"
			            android:layout_marginTop="8dp"
			            android:width="256dp"
			            android:text="@string/login"
			            android:textColor="@color/white"
			            android:shadowColor="@color/black"
			            android:shadowDx="1"
			            android:shadowDy="1"
			            android:textSize="20sp"
			            android:background="@drawable/button_green_selector"
			           />
			        
			    </LinearLayout>
			    
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingTop="20dp"
				android:paddingBottom="10dp"
		    >
		        <TextView
		            android:text="@string/recover"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@drawable/link_selector"
		            android:padding="10dp"
		            android:linksClickable="true"
		            android:clickable="true"
		            android:onClick="recoverClicked"
		            android:focusable="true"
		            android:focusableInTouchMode="true"
		           />
		        
		        <TextView
		            android:text="@string/dot"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:padding="10dp"
		           />
		        
		        <TextView
		            android:text="@string/sign_up"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@drawable/link_selector"
		            android:padding="10dp"
		            android:clickable="true"
		            android:onClick="signupClicked"
		            android:focusable="true"
		            android:focusableInTouchMode="true"
		           />
		
	        </LinearLayout>
	        
	    </LinearLayout>
	
	    </ScrollView>
	</LinearLayout>
