<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/prowork_blue"
  >
  
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        android:layout_weight="1"
	        android:gravity="center|bottom"
	    >
	    
		        <TextView
		            android:text="@string/logged_in_as"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:padding="10dp"
		           />
		        
		        <TextView
		            android:id="@+id/username"
		            android:text="@string/app_name"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/white"
		            android:padding="10dp"
		            android:textSize="30sp"
		           />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        android:layout_weight="1"
	        android:gravity="center"
	    >   

	        <Button
	            android:id="@+id/logout_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:layout_marginTop="8dp"
	            android:width="256dp"
	            android:text="@string/logout"
	            android:textColor="@color/white"
	            android:shadowColor="@color/black"
	            android:shadowDx="1"
	            android:shadowDy="1"
	            android:textSize="20sp"
	            android:background="@drawable/button_green_selector"
	           />
	        
	    </LinearLayout>

	</LinearLayout>